# mxnet-mtcnn

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: mtcnn.hpp  mxnet_mtcnn.hpp
src/libmtcnn/: CMakeLists.txt  mxnet_mtcnn.cpp  utils.cpp
src/main/: CMakeLists.txt  detect.cpp  detect.hpp  extract.cpp  stream_process.cpp  test_camera.cpp  test_detect.cpp  test_picture.cpp
